[project]
name = "amazon-sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Youhana Mikhaiel",email = "youhana.mikhaiel1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.48.3,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "datasets (>=3.3.0,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "accelerate (>=1.4.0,<2.0.0)",
    "peft (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.4"

